# OpenGL_CMAKE_Template

./: CMakeLists.txt  README.md
Dependencies/glew/lib/: libGLEW.so.2.2.0
Dependencies/glew/lib/Debug/: glew32d.exp  glew32d.lib
Dependencies/glfw/lib/: glfw3.lib
Dependencies/glfw/lib/pkgconfig/: glfw3.pc
Source/: CMakeLists.txt
Source/src/: main.cpp
